# My-Claude-Code

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
docs/plans/: 2026-05-05-fastapi-web-frontend-design.md  2026-05-05-fastapi-web-frontend-implementation.md  2026-05-05-frontend-redesign-implementation.md  2026-05-05-frontend-redesign.md
python/mini_claude/: __main__.py  agent.py  tools.py
src/: pyproject.toml
src/mini_claude/: __main__.py  agent.py  frontmatter.py  memory.py  session.py  tools.py
src/mini_claude/web/: __init__.py  api.py  models.py
src/mini_claude/web/templates/: admin.html  app.js  index.html  style.css
src/mini_claude_py.egg-info/: PKG-INFO  SOURCES.txt
