[project]
name = "mini-claude-py"
version = "0.1.0"
description = "A concise programming agent mimicking Claude Code"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
mini-claude-py = "mini_claude.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"